AUT-1228: Fix overflow on interrupt screen

--- a/src/assets/scss/application.scss
+++ b/src/assets/scss/application.scss
@@ -6,6 +6,7 @@
   padding: 30px;
   margin-right: 15px;
   margin-left: 15px;
+  width: auto;
 }
 
 .govuk-white-text {
